--- a/angular.json
+++ b/angular.json
@@ -124,6 +124,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "project"
+    }
+  },
+  "defaultProject": "project",
+  "cli": {
+    "analytics": "b3c70a5b-2548-47b7-91a9-a3f4181cef02"
+  }
 }
